upload button fixed on ie9

--- a/v2/component/edit/edit-component.scss
+++ b/v2/component/edit/edit-component.scss
@@ -11,12 +11,12 @@ edit-component {
             position: absolute;
             z-index: 100;
             top: 0;
-            left: 0;
-            font-size: 10em;
+            right: 0;
+            font-size: 3em;
             opacity: .001;
         }
     }
-    
+
     textarea {
         width: 100%;
         height: 10em;
